pint-pandas Changelog
=====================

0.6 (2024-06-16)
----------------

- Fix dequantify duplicate column failure #202
- Fix astype issue #196
- Support for `__array_ufunc__` and unary ops. #160
- Support for NumPy verson 2
- Minimum Pint version is 0.24
- Minimum Pandas version is 2.2


0.5 (2023-09-07)
----------------

- ReadTheDocs Documentation created.
- Support for Pandas version 2.1.0. #196
- Support for dtype-preserving `PintArray.map` for both Pandas 2.0.2 and Pandas 2.1. #196
- Support for <NA> values in columns with integer magnitudes
- Support for magnitudes of any type, such as complex128 or tuples #146
- Support for pandas 2.0, allowing `.cumsum, .cummax, .cummin` methods for `Series` and `DataFrame`. #186
- Support for unit registries with `force_ndarray_like = True`. #165
- A DataFrame/Series.pint.convert_object_dtype() function has been added to create PintArrays from Series of quantities.
- Minimum Pint version is 0.21
- Minimum Pandas version is 2.0

0.4 (2023-05-23)
----------------

- Support for <NA> values in columns with integer magnitudes
- Support for magnitudes of any type, such as complex128 or tuples #146
- Support for Pint 0.21 #168, #179
- Cast to `numpy.ndarray` in `PintArray._reduce` if needed to use `nanops` functions
- Minimum Pint version is 0.21
- Minimum Pandas version is 1.6

0.3 (2022-11-14)
----------------

- Support for pandas 1.5, with a significant uplift in capability. Many operations that gave results with object
  dtype now give PintArrays. #133
- Fixed a bug which caused the creation of PintArray (and even more so all binary mathematical operations)
  to convert input arrays to lists of Quantity, thereby causing a huge slowdown. #80
- Fixed a bug where listlike operands in binary operations were not correctly converted to Quantity arrays. #86
- Fixed pickling of `PintArray` instances. #71
- Fixed a bug where units of a quantity where ignored when creating a PintArray. #104